--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "release": "gren release --override"
   },
   "dependencies": {
-    "axios": "^0.21.0"
+    "axios": "^0.21.0",
+    "view-design": "^4.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.4.3",
