--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@fe-components/cpv-file",
-  "version": "1.0.7-1",
+  "version": "1.0.7",
   "description": "",
   "author": "https://github.com/fe-components",
   "license": "MIT",
