--- a/.travis.yml
+++ b/.travis.yml
@@ -19,14 +19,14 @@ cache: yarn
 deploy:
   # - provider: pages # you may delete this provider if you don't need deployment of github pages
   #   local-dir: docs # https://docs.travis-ci.com/user/deployment/packagecloud/#specify-package-folder
-  #   github-token: d736bb2958e912593eefe9424e683774005a563e
+  #   github-token: $GITHUB_TOKEN
   #   skip-cleanup: true
   #   keep-history: true
   #   on:
   #     branch: main
   - provider: npm
     email: yuwangifeng@163.com # use your own email
-    api_key: elX5TojNm-s9zn80MqjN2w
+    api_key: $NPM_TOKEN
     skip-cleanup: true
     on:
       branch: main
