--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "@fe-components/cpv-file",
   "version": "1.0.9",
   "description": "🔨 A Component for upload file.",
-  "author": "https://github.com/fe-components",
+  "author": "https://github.com/FEcomponents",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/fe-components/cpv-file.git"
+    "url": "https://github.com/FEcomponents/cpv-file.git"
   },
   "keywords": [
     "vue",
